# FUDO

./: .gitignore  Procfile  README.md  package.json  railway.toml  requirements.txt  start.sh  tmpclaude-7ce8-cwd  vercel.json
alex-coffee/backend/: .env.example  .gitignore  load_historical_data.py  pyproject.toml  railway.toml  requirements.txt
alex-coffee/backend/app/: config.py  database.py  encryption.py  fudo_client.py  main.py  models.py  sync.py
alex-coffee/backend/app/routers/: admin.py  dashboard.py  sync.py
alex-coffee/frontend/: package-lock.json  package.json
alex-coffee/frontend/src/app/: layout.tsx  page.tsx
alex-coffee/frontend/src/app/admin/: page.tsx
alex-coffee/frontend/src/app/settings/: page.tsx
alex-coffee/frontend/src/components/: hourly-distribution.tsx  kpi-cards.tsx  recent-sales.tsx  sales-by-category.tsx  sales-chart.tsx  top-products.tsx
alex-coffee/frontend/src/lib/: api.ts  utils.ts
