[project]
name = "alex-coffee-analytics"
version = "1.0.0"
description = "Analytics dashboard for FU.DO POS sales data"
authors = [{name = "Alex Coffee"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "pydantic-settings==2.7.1",
    "alembic==1.14.1",
    "python-dotenv==1.0.1",
    "cryptography==43.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
